[package]
name = "coroutine"
version = "0.1.0"
authors = [
    "Pang Anqi <pangaq@shanghaitech.edu.cn>",
    "Qin Xin <qinxin@shanghaitech.edu.cn>"
]

[build-dependencies]
gcc = "0.3"
log = "0.3"

[lib]
name = "coroutine"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
context = "1.0"
log = "0.3"

